<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.LoginFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:stretchColumns="3">

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost"/>

            <EditText
                android:id="@+id/serverHostID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort"/>

            <EditText
                android:id="@+id/serverPortID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/passwordID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/firstName"/>

            <EditText
                android:id="@+id/firstNameID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/lastNameID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_span="3"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleID"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:text="@string/male" />
                <RadioButton
                    android:id="@+id/femaleID"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/female"/>
            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/signInID"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/signIn"/>
            <Button
                android:id="@+id/registerID"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/register"/>
        </LinearLayout>

    </TableLayout>
</FrameLayout>